--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Procedural Art — Minimal WebGL</title>
+  <title>noise</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <style>
     :root{--ui-h:36px;--gap:8px;--bg:#0b0b0b}
