--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8" />
   <title>noise</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <link rel="icon" href="favicon.svg" type="image/svg+xml" />
   <style>
     :root{--ui-h:36px;--gap:8px;--bg:#0b0b0b}
     html,body{height:100%;margin:0;background:var(--bg);color:#ddd;font-family:system-ui,Segoe UI,Roboto,Helvetica,Arial}
