--- a/index.html
+++ b/index.html
@@ -8,15 +8,14 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <link rel="icon" href="favicon.svg" type="image/svg+xml" />
   <style>
-    :root{--ui-h:36px;--gap:8px;--bg:#0b0b0b}
+    :root{--ui-h:36px;--gap:30px;--bg:#0b0b0b}
     html,body{height:100%;margin:0;background:var(--bg);color:#ddd;font-family:system-ui,Segoe UI,Roboto,Helvetica,Arial}
     #wrap{display:grid;grid-template-rows:1fr var(--ui-h);height:100vh}
     canvas{width:100%;height:100%;display:block}
     .controls{display:flex;gap:var(--gap);align-items:center;padding:6px;background:linear-gradient(0deg,rgba(255,255,255,0.02),transparent);backdrop-filter:blur(6px)}
-    .ctrl{display:flex;align-items:center;gap:6px;color:#ddd;font-size:13px}
-    label{min-width:86px}
+    .ctrl{display:flex;align-items:center;gap:6px;color:#ddd;font-size:13px}  
     input[type=range]{width:160px}
-    .seedBtn{padding:6px 10px;border-radius:6px;border:1px solid rgba(255,255,255,0.06);background:transparent;color:#ddd;cursor:pointer}
+    .seedBtn{padding:4px 4px;border:2px solid rgba(255,255,255,0.3);background:transparent;color:#ddd;cursor:pointer}
     .small{font-size:12px;color:#aaa}
   </style>
 </head>
